// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LaTeX Plugin testcase: should render block LaTeX with $$..$$ syntax 1`] = `
<div>
  <div>
    <p>
      This is an block LaTeX: 
    </p>
    <p>
      <span
        class="katex"
      />
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin testcase: should render block LaTeX with \\[..\\] syntax 1`] = `
<div>
  <div>
    <p>
      This is an block LaTeX: 
    </p>
    <pre>
      <code>
          \\[
      </code>
    </pre>
    <p>
      \\Delta t' = \\frac{\\Delta t}{\\sqrt{1 - \\frac{v^2}{c^2}}}
      <br />
      ]
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin testcase: should render inline LaTeX with $..$ syntax 1`] = `
<div>
  <div>
    <h3>
      Latex
    </h3>
    <p>
      inline standard: 
      <span
        class="katex"
      />
    </p>
    <p>
      block standard：
    </p>
    <span
      class="katex"
    />
    <p>
      inline: 
      <span
        class="katex"
      />
    </p>
    <p>
      block: 
    </p>
    <span
      class="katex"
    />
  </div>
</div>
`;

exports[`LaTeX Plugin testcase: should render inline LaTeX with \\(..\\) syntax 1`] = `
<div>
  <div>
    <p>
      This is an inline LaTeX: 
      <span
        class="katex"
      />
    </p>
  </div>
</div>
`;
